[package]
name = "pinned-queue"
version = "0.1.0"
edition = "2021"

authors = ["Redfire <redfire75369@hotmail.com>"]
license = "MPL-2.0"
description = "Queue-like data structure whose elements can never move"
homepage = "https://github.com/Redfire75369/pinned-queue#readme"
documentation = "https://docs.rs/pinned-queue"
repository = "https://github.com/Redfire75369/pinned-queue"
readme = "readme.md"

keywords = [
    "pin",
    "queue"
]

exclude = [
    ".editorconfig",
    ".gitignore",
]
